Progress towards building gosu app

--- a/app/jni/CMakeLists.txt
+++ b/app/jni/CMakeLists.txt
@@ -13,8 +13,9 @@ add_subdirectory(SDL2)
 # Compilation of companion libraries
 #add_subdirectory(SDL_image)
 #add_subdirectory(SDL_mixer)
-#add_subdirectory(SDL_ttf)
+add_subdirectory(SDL_ttf)
 add_subdirectory(gosu)
+add_subdirectory(openal-soft)
 
 # Your game and its CMakeLists.txt are in a subfolder named "src"
 add_subdirectory(src)
