--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "app/jni/gosu"]
 	path = app/jni/gosu
 	url = https://github.com/cyberarm/gosu
+[submodule "app/jni/SDL_ttf"]
+	path = app/jni/SDL_ttf
+	url = https://github.com/SDL-mirror/SDL_ttf
