Removed openal-soft for now, project successfully compiles, links, and installs; However doesn't run.

--- a/app/jni/src/CMakeLists.txt
+++ b/app/jni/src/CMakeLists.txt
@@ -8,6 +8,6 @@ add_library(main SHARED)
 
 target_sources(main PRIVATE sdl_app.cpp)
 
-target_link_libraries(main SDL2)
+target_link_libraries(main SDL2 SDL2main)
 
 
